@@ -1,6 +1,8 @@
 2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* README.BeOS: added
 	* README.win32: added (temporarily unavailable) to cross-compiling instructions	
+	* Makefile.be: added 'make bindist' option to automate distributing
+	* actors.cc: removed an inline in BeOS. (won't compile otherwise...)
 
 2000-11-26  Max Horn  <max@quendi.de>
 	* files/utils.cc: fixed a bug in get_system_path (it sometimes "forgot" to call switch_slashes)
